# satisfactoryrecipe

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
satisfactory_recipe/: __init__.py  recipe.py
satisfactoryrecipe/: recipe.py
src/satisfactoryrecipe/: item.py  machine.py  recipe.py
tests/: test_item.py  test_machine.py  test_recipe.py
tests/satisfactoryrecipe/: test_item.py  test_machine.py  test_recipe.py
